testing/2_functional/invalidOrMissingRequestBody/v2.0.1/Receiver/mwdi+diagram.invalidOrMissingRequestBody.receiver.plantuml
@startuml mwdi+diagram.invalidOrMissingRequestBody.receiver
skinparam responseMessageBelowArrow true

title
mwdi+testcase.invalidOrMissingRequestBody.receiver
end title

participant "Postman" as Postman
participant "Data" as Data
participant "Collection" as Collection

participant "/v1/regard-controller-attribute-value-change" as RCAVC

group Preparation
  Data --\\o Postman : {servers}
  activate Postman
  Postman --\\o Collection : {servers}
end

note over Postman, RCAVC
  Two testcases to be executed.
  Both tests differ in the provided requestBody:
  - an invalid requestBody according to OAS
  - no requestBody provided at all
end note


group /v1/regard-controller-attribute-value-change
  Collection --\\o Postman : {servers}
  Postman -> RCAVC : (a) {invalidRequestBody} \n(b) no requestBody
  Postman <-- RCAVC : 400
  note right Postman #Orange
    check for 400
  end note
end

deactivate Postman

@enduml
